@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_lst_utl.h,v 1.49 2012-11-19 03:17:12 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_lst_utl.h,v 1.50 2012-11-19 03:41:53 zender Exp $ */
 
 /* Purpose: List utilities */
 
@@ -57,7 +57,7 @@ nco_lst_rx_search /* [fnc] Search for pattern matches in var string list */
 
 int /* O [nbr] Number of matches to current rx */
 nco_trv_rx_search /* [fnc] Search for pattern matches in traversal table */
-(char *rx_sng, /* I [sng] Regular expression pattern */
+(const char * const rx_sng, /* I [sng] Regular expression pattern */
  const nco_obj_typ obj_typ, /* I [enm] Object type (group or variable) */
  trv_tbl_sct * const trv_tbl); /* I/O [sct] Traversal table */
 
